test/parse/expr/bad-getlocal-name.txt
;;; ERROR: 1
(module (func (local $f f32) (get_local f)))
(;; STDERR ;;;
parse/expr/bad-getlocal-name.txt:2:41: unexpected token "f"
(module (func (local $f f32) (get_local f)))
                                        ^
parse/expr/bad-getlocal-name.txt:2:42: syntax error, unexpected ), expecting NAT or VAR
(module (func (local $f f32) (get_local f)))
                                         ^
;;; STDERR ;;)
